--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clerk/localizations": "^2.4.2",
     "@clerk/nextjs": "^5.0.6",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-table": "^8.16.0",
